# easy_subtitles

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
